# pyguard

./: .gitignore  PLAN.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
src/pyguard/: cli.py  environment.py  reporter.py  rules.py  scanner.py
src/pyguard/data/: known_bad.json
tests/: test_environment.py  test_rules.py  test_scanner.py
